syntax = "proto3";

package net.moznion.protoc.plugin.dynamodb;

import "google/protobuf/descriptor.proto";

option java_package = "net.moznion.protoc.plugin.dynamodb";
option java_outer_classname = "OptionsProto";

extend google.protobuf.FileOptions {
    FileOptions fileopt = 50000; // TODO be unique number
}

message FileOptions {
    string java_dynamodb_table_name = 1;
    string java_dynamodb_entity_class_name = 2;
}

extend google.protobuf.FieldOptions {
    FieldOptions fieldopt = 50001; // TODO be unique number
}

message FieldOptions {
    bool java_dynamodb_hash_key = 1;
    bool java_dynamodb_range_key = 2;
    bool java_dynamodb_ignore = 3;
    string java_dynamodb_alias = 4;
    repeated string java_dynamodb_hash_key_gsi_names = 5;
    repeated string java_dynamodb_range_key_gsi_names = 6;
}
